cmake_minimum_required (VERSION 3.3)

project(File2Include)

set(SOURCE 
	File2String.cpp
)

add_executable(File2String ${SOURCE})
set_target_properties(File2String
    PROPERTIES
#    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
#    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${BINARY_DIR}"
	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${BINARY_DIR}"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${BINARY_DIR}"
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${BINARY_DIR}"
)

source_group("source" FILES ${SOURCE})
